--- a/About_us_page.html
+++ b/About_us_page.html
@@ -35,7 +35,7 @@
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="file:///C:/Users/SACHIN%20PANDAT/Desktop/final%20project/final_project.html"><img
+      <a class="navbar-brand" href="index.html"><img
           src="media/mb-logo.webp" width="190px"></a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
