--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
 
           <li class="nav-item">
             <a class="nav-link"
-              href="file:///C:/Users/SACHIN%20PANDAT/Desktop/final%20project/Login_me.html">
+              href="Login_me.html">
               <strong>Login me</strong></a>
           </li>
 
 
            <li class="nav-item">
-          <a class="nav-link" href="file:///C:/Users/SACHIN%20PANDAT/Desktop/final%20project/our_collection.html">
+          <a class="nav-link" href="our_collection.html">
             <strong>Our Collection</strong></a>
           </li>
 
 
           <li class="nav-item">
-          <a class="nav-link" href="file:///C:/Users/SACHIN%20PANDAT/Desktop/final%20project/book_test_drive.html">
+          <a class="nav-link" href="book_test_drive.html">
             <strong>Book Free TestDrive</strong></a>
           </li>
 
@@ -73,7 +73,7 @@
 
           <li class="nav-item">
             <a class="nav-link"
-              href="file:///C:/Users/SACHIN%20PANDAT/Desktop/final%20project/About_us_page.html"><strong>About
+              href="About_us_page.html"><strong>About
                 Us</strong></a>
           </li>
         </ul>
