--- a/Login_me.html
+++ b/Login_me.html
@@ -37,7 +37,7 @@
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="file:///C:/Users/SACHIN%20PANDAT/Desktop/final%20project/final_project.html">
+            <a class="navbar-brand" href="index.html">
                 <img src="media/mb-logo.webp" width="190px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -52,20 +52,20 @@
 
 
                         <li class="nav-item">
-          <a class="nav-link" href="file:///C:/Users/SACHIN%20PANDAT/Desktop/final%20project/final_project.html">
+          <a class="nav-link" href="index.html">
             <strong>Home</strong></a>
           </li>
 
                     <li class="nav-item">
                         <a class="nav-link"
-                            href="file:///C:/Users/SACHIN%20PANDAT/Desktop/final%20project/Login_me.html">
+                            href="Login_me.html">
                             <strong>Login me</strong></a>
                         </li>
 
 
 
            <li class="nav-item">
-          <a class="nav-link" href="file:///C:/Users/SACHIN%20PANDAT/Desktop/final%20project/our_collection.html">
+          <a class="nav-link" href="our_collection.html">
             <strong>Our Collection</strong></a>
           </li>
 
@@ -73,14 +73,14 @@
 
                     <li class="nav-item ">
                         <a class="nav-link"
-                            href="file:///C:/Users/SACHIN%20PANDAT/Desktop/final%20project/book_test_drive.html">
+                            href="book_test_drive.html">
                             <strong>Book Free TestDrive</strong></a>
                     </li>
 
 
                     <li class="nav-item">
                         <a class="nav-link"
-                            href="file:///C:/Users/SACHIN%20PANDAT/Desktop/final%20project/About_us_page.html"><strong>About
+                            href="About_us_page.html"><strong>About
                                 Us</strong></a>
                     </li>
                 </ul>
